--- a/src/htdocs/templates/splash.html
+++ b/src/htdocs/templates/splash.html
@@ -3,4 +3,7 @@
   <div class="message-wrapper">
     <h2 class="message" data-ng-bind-html="message"></h2>
   </div>
+  <div class="impress" data-impress>
+    <div class="impress-slide" data-impress-slide>asdf</div>
+  </div>
 </div>
