--- a/src/htdocs/templates/impress-demo.html
+++ b/src/htdocs/templates/impress-demo.html
@@ -1,4 +1,4 @@
-<div class="impress-not-supported">
+<div data-impress>
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
 
