removed focus outline

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -2,16 +2,16 @@
 @require('_fonts')
 
 body {
-  transform: translateZ(0);
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+  // transform: translateZ(0);
+  // -moz-osx-font-smoothing: grayscale;
+  // -webkit-font-smoothing: antialiased;
   color: #555;
-  font-family: 'OpenSans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
 }
 
 h1, h2, h3, h4, h5 {
-  text-rendering: optimizelegibility;
+  // text-rendering: optimizelegibility;
   font-weight: 300;
   font-family: 'SourceSansPro';
 }
