yay, converted most of the element data refs to scope data

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -1,6 +1,10 @@
 @require('_impress-demo.css')
 @require('_fonts')
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 body {
   transform: translateZ(0);
   -moz-osx-font-smoothing: grayscale;
